--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.1.1
   http: ^1.2.0
   image_picker: ^1.0.7
+  fl_chart: ^0.65.0
 
 
   # The following adds the Cupertino Icons font to your application.
